--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/view/admin/station_add.jsp=UTF-8
 encoding//WebContent/WEB-INF/view/template/menu-admin.jsp=UTF-8
 encoding//WebContent/WEB-INF/view/template/menu-user.jsp=UTF-8
 encoding/<project>=UTF-8
