--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/controller/JoinController.java=UTF-8
 encoding//src/controller/LogInOutController.java=UTF-8
 encoding//src/controller/WSController.java=UTF-8
